fix: fix layout to stop things jumping around when refreshing

--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,12 @@
     transform: rotate(360deg);
   }
 }
+
+h1 object {
+  width: 40px;
+  height: 40px;
+}
+
+.invisible {
+  visibility: hidden;
+}
